Track fetch success by location (and show in web ui).

--- a/webUi/css/node-status.css
+++ b/webUi/css/node-status.css
@@ -13,3 +13,13 @@
   stroke: #000;
   shape-rendering: crispEdges;
 }
+
+.estimator circle {
+    fill: none;
+    stroke: #449;
+}
+
+.estimator polygon {
+    fill: #77f;
+    opacity: 0.5;
+}
